Worked on milestones addition modal and form binding using spring, still not able to bind idea to milestone so that I can save. The form also seems to have a few bugs that make unable to set all values such as datepicker dependency, and the hidden idea, maybe for the idea I should just get it from the url?